--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6df4dd5969.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=DM+Serif+Display:ital@1&family=Fraunces:opsz,wght@9..144,700&family=Merienda:wght@800&family=Montserrat:wght@400;700&family=Oswald&family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=DM+Serif+Display:ital@1&family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@400;700&family=Oswald&family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,12 +23,18 @@
                     </div>
                     <nav>
                         <div class="info">
-                            <a href="#">My Stacks</a>
-                            <a href="#">Portfolio</a>
-                            <a href="#">About Me</a>
                             <a href="#">Home</a>
+                            <a href="#">About Me</a>
+                            <a href="#">Portfolio</a>
+                            <a href="#">My Stacks</a>
                             <a href="#">Contact</a>
                             <p>Follow me</p>
+                            <div class="follow">
+                                <img src="images/Instagram_logo_2022.svg.png" alt="">
+                                <img src="images/Twitter-new-logo.jpeg" alt="">
+                                <img src="images/download (5).png" alt="">
+                                <img src="images/link.bc4172bd-63f0-455a-9acd-5457f44e4473" alt="">
+                            </div>
                         </div>
                     </nav>
                 </div>
